added more colors

--- a/app/views/pages/_shifting_colors.html.haml
+++ b/app/views/pages/_shifting_colors.html.haml
@@ -620,7 +620,23 @@
 				background-color: #fd7e14;
 				color: #000000;
 			}			
-			
+			#ffc107
+			.yellow-example {
+				background-color: #ffc107;
+				color: #000000;
+			}
+			.green-example {
+				background-color: #198754;
+				color: #000000;
+			}
+			.teal-example {
+				background-color: #20c997;
+				color: #000000;
+			}
+			.cyan-example {
+				background-color: #0dcaf0;
+				color: #000000;
+			}
 			
 
 			@media (inverted-colors: inverted) {
@@ -654,6 +670,22 @@
 				}
 				.orange-example {
 					background-color: #0281eb;
+					color: #ffffff;
+				}
+				.yellow-example {
+					background-color: #003ef8;
+					color: #ffffff;
+				}
+				.green-example {
+					background-color: #e678ab;
+					color: #ffffff;
+				}
+				.teal-example {
+					background-color: #df3668;
+					color: #ffffff;
+				}
+				.cyan-example {
+					background-color: #f2350f;
 					color: #ffffff;
 				}
 			}
@@ -864,6 +896,110 @@
 								%dt Contrast Against Black
 								%dd 8.2:1
 					.border.border-dark.orange-example.p-4.text-center
+						%p.p-0 Example Text
+
+			.col.col-md-6
+				.card
+					.card-body
+						%h3.card-title Yellow
+						%dl
+							%div
+								%dt Hex Code
+								%dd #ffc107
+							%div
+								%dt Red, Green, Blue
+								%dd 255, 198, 7
+							%div
+								%dt Relative Luminance
+								%dd 0.5941526866857989
+							%div
+								%dt Hue
+								%dd 45
+							%div
+								%dt Contrast Against White
+								%dd 1.6:1
+							%div
+								%dt Contrast Against Black
+								%dd 12.9:1
+					.border.border-dark.yellow-example.p-4.text-center
+						%p.p-0 Example Text
+
+			.col.col-md-6
+				.card
+					.card-body
+						%h3.card-title Green
+						%dl
+							%div
+								%dt Hex Code
+								%dd #198754
+							%div
+								%dt Red, Green, Blue
+								%dd 25, 235, 84
+							%div
+								%dt Relative Luminance
+								%dd 0.18174712291948017
+							%div
+								%dt Hue
+								%dd 152.1818182
+							%div
+								%dt Contrast Against White
+								%dd 4.5:1
+							%div
+								%dt Contrast Against Black
+								%dd 4.6:1
+					.border.border-dark.green-example.p-4.text-center
+						%p.p-0 Example Text
+
+			.col.col-md-6
+				.card
+					.card-body
+						%h3.card-title Teal
+						%dl
+							%div
+								%dt Hex Code
+								%dd #20c997
+							%div
+								%dt Red, Green, Blue
+								%dd 32, 201, 151
+							%div
+								%dt Relative Luminance
+								%dd 0.4431473018517139
+							%div
+								%dt Hue
+								%dd 162.2485207
+							%div
+								%dt Contrast Against White
+								%dd 2.1:1
+							%div
+								%dt Contrast Against Black
+								%dd 9.9:1
+					.border.border-dark.teal-example.p-4.text-center
+						%p.p-0 Example Text
+
+			.col.col-md-6
+				.card
+					.card-body
+						%h3.card-title Cyan
+						%dl
+							%div
+								%dt Hex Code
+								%dd #0dcaf0
+							%div
+								%dt Red, Green, Blue
+								%dd 13, 202, 240
+							%div
+								%dt Relative Luminance
+								%dd 0.4861789558697952
+							%div
+								%dt Hue
+								%dd 190.0440529
+							%div
+								%dt Contrast Against White
+								%dd 2.0:1
+							%div
+								%dt Contrast Against Black
+								%dd 10.7:1
+					.border.border-dark.cyan-example.p-4.text-center
 						%p.p-0 Example Text
 						
 
