--- a/app/views/pages/_colors.html.haml
+++ b/app/views/pages/_colors.html.haml
@@ -76,7 +76,16 @@
 							%span ⠉
 							%span ⠅
 							%span ⠲
-
+					.braille-line
+						- 5.times do
+							%span{role: "text", aria: {label: "Braille Pattern 1 2 3 4"}} ⠏
+							%span{role: "text", aria: {label: "Braille Pattern 1"}} ⠁
+							%span{role: "text", aria: {label: "Braille Pattern 2 3 4 5"}} ⠞
+							%span{role: "text", aria: {label: "Braille Pattern 1 2 3 5"}} ⠗
+							%span{role: "text", aria: {label: "Braille Pattern 2 4"}} ⠊
+							%span{role: "text", aria: {label: "Braille Pattern 1 4"}} ⠉
+							%span{role: "text", aria: {label: "Braille Pattern 1 3"}} ⠅
+							%span{role: "text", aria: {label: "Braille Pattern 2 5 6"}} ⠲
 							
 		
 		
