testing computer braille

--- a/app/views/pages/_colors.html.haml
+++ b/app/views/pages/_colors.html.haml
@@ -66,6 +66,9 @@
 				.braille-page.border.border-4.p-4{contenteditable: "true"}
 					.braille-line-grid
 						⠠⠏⠁⠞⠗⠊⠉⠅⠀⠠⠛⠁⠗⠽⠀⠠⠧⠑⠇⠇⠊⠁⠀⠼⠁⠊⠓⠛⠤⠼⠃⠁⠃⠋⠀⠿⠿⠿⠿⠿
+					.braille-line-grid
+						⡏⠁⠞⠗⠊⠉⠅⠀⡛⠁⠗⠽⠀⠠⠧⠑⠇⠇⠊⠁⠀⠼⠁⠊⠓⠛⠤⠼⠃⠁⠃⠋⠀⠿⠿⠿⠿⠿⠿⠿
+					
 					.braille-line
 						- 5.times do
 							%span ⠏
